Fix scrollbar issue

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -13,6 +13,6 @@
     height: 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    overflow: auto;
+    /* overflow: auto; */
   }
 }
